--- a/src/UI_kit/cards/cards.scss
+++ b/src/UI_kit/cards/cards.scss
@@ -1,52 +1,41 @@
 .cards {
-	&__find-room {
-        grid-area: find-room;
-    }
-
-    &__booking {
-			grid-area: booking;
-			justify-self: center;	
-    }
-
-    &__calendar-wrapper {
-			grid-area: calendar;
-			align-self: start;
-    }
-
-    &__registration {
-        grid-area: registration;
-    }
-
-    &__login {
-				grid-area: login;
-				align-items: center;
-    }
-
-    &__rooms {
-				grid-area: rooms;
-				grid-area: rooms;
-				display: flex;
-				flex-flow: column;
-		}
-		
-		&__room-one {
-			margin-bottom: 43px;
-		}
-
+  &__find-room {
+    grid-row: 1/2;
+    grid-column: 1/2;
+  }
+  &__booking {
+    grid-row: 1/3;
+    grid-column: 2/3;
+  }
+  &__calendar-wrapper {
+    grid-column: 3/4;
+    grid-row: 1/2;
+  }
+  &__registration {
+    grid-column: 1/2;
+    grid-row: 2/5;
+  }
+  &__login {
+    grid-row: 3/4;
+    grid-column: 2/3;
+  }
+  &__rooms {
+    display: flex;
+    flex-flow: column;
+    grid-column: 3/4;
+    grid-row: 2/3;
+  }
+  &__room-one {
+    margin-bottom: 41px;
+  }
 	&__container {
-		max-width: 1453px;
+    max-width: 1260px;
     margin: 0 auto;
-    /* grid-gap: 0px; */
     display: grid;
-    justify-content: center;
-    grid-row-gap: 8px;
-		grid-template-columns: 26.7% 33% 20%;
-    grid-template-rows: 37.9% 8% 31% 7% 5%;
-    grid-template-areas:
-        "find-room booking calendar"
-        "registration booking rooms"
-        "registration login rooms"
-        "registration login rooms"
-        "registration . .";
-	}
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-rows: 373px 99px 385px 116px;
+    grid-gap: 39px 0px;
+    grid-auto-rows: 1fr;
+    grid-auto-flow: dense;
+  }
 }
