--- a/src/UI_kit/headers-footers/components/header/header.pug
+++ b/src/UI_kit/headers-footers/components/header/header.pug
@@ -1,4 +1,4 @@
-include UI_kit/form-elements/components/button/button
+include /UI_kit/form-elements/components/button/button
 mixin header(options = {additionalProps: {}, items: [], login: true} )
     -
         let additionalProps = 
@@ -27,9 +27,9 @@ mixin header(options = {additionalProps: {}, items: [], login: true} )
                     case options.login
                         when false
                             li.header__login
-                                +button({theme: "transparent", size: "smaller", height: "medium", arrow: false, text: "войти", textColor: "purple"})
+                                +button({theme: "transparent", size: "small", arrow: false, link_text: "войти", color: "purple"})
                             li.header__registration
-                                +button({theme: "full", size: "medium", height: "medium", arrow: false, text: "зарегистрироваться", textColor: "white"})
+                                +button({theme: "full", size: "large", arrow: false, link_text: "зарегистрироваться", color: "white"})
                         when true
                             span.header__user-name
                                 a.header__user-link Юлий Цезарь   
