--- a/src/UI_kit/form-elements/components/button/button.scss
+++ b/src/UI_kit/form-elements/components/button/button.scss
@@ -1,6 +1,6 @@
 .button {
 	background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-	padding: 3px 2px 2px 2px;
+	padding: 2px 2px 2px 2px;
 	border-radius: 3em;
 	text-align: center;
 	max-width: 104px;
@@ -23,6 +23,14 @@
 		color: rgba(31, 32, 65, 0.5);
 	}
 	
+	&_size-header-small {
+		max-width: 88px;
+	}
+
+	&_size-header-large {
+		max-width: 195px;
+	}
+
 	&_size-small {
 		max-width: 99px;
 	}
@@ -70,6 +78,14 @@
 		color: #FFFFFF;
     text-decoration: none;
 		letter-spacing: -0.2px;
+	}
+
+	&__link_size-header-small {
+		line-height: 31px;
+	}
+
+	&__link_size-header-large {
+		line-height: 29px;
 	}
 
 	&__link_theme-none {
