--- a/src/UI_kit/headers-footers/components/header/header.scss
+++ b/src/UI_kit/headers-footers/components/header/header.scss
@@ -1,89 +1,221 @@
 @import 'FEcomponents/button/button';
-
 .header {
-    $root: &;
+	background: #FFFFFF;
+	box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+	padding: 10px 0px 12px 0px;
+	
+	&__logo {
+		margin-right: auto;
+	}
 
-    margin-top: 50px;
-    padding: 11px 0px 11px 0px;
-    background: #FFFFFF;
-    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+	&__container {
+    max-width: 1159px;
+    margin: 0 auto;
+    display: flex;
+	}
 
-    &__container {
-        width: 93rem;
-        margin: 0 auto;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
+	&__nav {
+    display: flex;
+    align-items: center;
+    flex-basis: 771px;
+	}
 
-    &__logo {
+	@media screen and (max-width: 900px) {
+		&__nav {
+			flex-flow: column wrap;
+			align-items: flex-end;
+			margin-top: 26px;
+			display: none;
+		}
+	}
 
-        #{$root}__logo-img {
-            width: 85px;
-        }
-    }
+	&__site-nav {
+    list-style-type: none;
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 5px;
+    flex-grow: 1;
+	}
 
-    &__nav {
-        display: flex;
+	@media screen and (max-width: 900px) {
+		&__site-nav {
+			flex-flow: column wrap;
+			align-items: flex-end;
+			margin-right: 3px;
+		}
+	}
 
-        #{$root}__site-nav {
-            list-style-type: none;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-right: 2px;
+	&__item {
+		margin-right: 21px;
+	}
 
-            #{$root}__item {
-                margin-right: 18px;
+	@media screen and (max-width: 900px) {
+		&__item {
+			margin: 0px 0px 6px 0px;
+		}
+	}
 
-                #{$root}__item-link {
-                    font-family: Montserrat;
-                    font-style: normal;
-                    font-weight: normal;
-                    font-size: 11px;
-                    line-height: 17px;
-                    color: rgba(31, 32, 65, 0.5);
-                    display: block;
-                    
-                    &_font_weight-bold {
-                        font-weight: 700;
-                    }
+	&__item-link {
+		font: normal normal 14px/17px Montserrat;
+		display: block;
+		color: rgba(31, 32, 65, 0.5);
+		cursor: pointer;
+	}
 
-                    &_extend-true::after {
-                        content: "";
-                        background-image: url("/images/expand.svg");
-                        width: 13px;
-                        height: 7px;
-                        display: inline-block;
-                        background-repeat: no-repeat;
-                        background-size: 80% 80%;
-                        background-position: center center;
-                        margin-left: 4px;
-                    }
-                }
-            }
-        }
+	&__item-link_weight-bold {
+		font-weight: bold;
+	}
 
-        #{$root}__user-nav {
-            list-style-type: none;
-            display: flex;
-            justify-content: space-between;
+	&__item-link_expandable::after {
+		content: '';
+		display: inline-block;
+		background-image: url('/images/expand.svg');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: 100% 100%;
+		width: 13px;
+    height: 8px;
+    margin-left: 7px;
+	}
 
-            #{$root}__login {
-                margin-right: 15px;
-            }
+	&__user-nav {
+		list-style-type: none;
+    display: flex;
+	}
 
-            #{$root}__user-name {
-                font-family: Montserrat;
-                font-style: normal;
-                font-weight: normal;
-                font-size: 12px;
-                line-height: 17px;
-                color: rgba(31, 32, 65, 0.5);
-                letter-spacing: -0.43px;
-                padding-left: 14px;
-                border-left: 1px solid rgba(31, 32, 65, 0.1);
-            }
-        }
-    }
+	@media screen and (max-width: 900px) {
+		&__user-nav  {
+			flex-flow: column wrap;
+			align-items: flex-end;
+			margin-right: 2px;
+		}
+	}
+
+	&__login {
+		width: 88px;
+		margin-right: 20px;
+	}
+
+	@media screen and (max-width: 900px) {
+		&__login  {
+			margin-bottom: 8px;
+		}
+	}
+
+	&__registration {
+		width: 195px;
+	}
+
+	&__username {
+    border-left: 1px solid rgba(31, 32, 65, 0.1);;
+    padding-left: 19px;
+	}
+
+	@media screen and (max-width: 900px) {
+		&__username  {
+			margin: 0;
+		}
+	}
+
+	&__username-link {
+		font: normal normal 14px/33px Montserrat;
+		text-decoration: none;
+		display: block;
+    color: rgba(31, 32, 65, 0.5);
+	}
+
+	&__hamburger-menu {
+		position: relative;
+	}
+
+	&__menu-toggle {
+		opacity: 0;
+		display: none;
+    width: 24px;
+    height: 21px;
+    position: absolute;
+		top: 0;
+		right: 0;
+		z-index: 1;
+		margin-right: 5px;
+	}
+
+	@media screen and (max-width: 900px) {
+		&__menu-toggle {
+			display: inline-block;
+		}
+	}
+
+	&__menu-button {
+    opacity: 0;
+    width: 24px;
+    height: 23px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+	}
+
+	&__fake-toggle {
+		position: absolute;
+		display: none;
+    height: 2px;
+    width: 25px;
+    background: #616161;
+    border-radius: 10px;
+    right: 0;
+		top: 9px;
+		margin-right: 5px;
+		transition-duration: .25s;
+		cursor: pointer;
+	}
+
+	@media screen and (max-width: 900px) {
+		&__fake-toggle {
+			display: inline-block;
+		}
+	}
+
+	&__fake-toggle::before {
+		content: "";
+    position: absolute;
+    height: 2px;
+    width: 100%;
+		background: #616161;
+		border-radius: 10px;
+    top: -8px;
+		z-index: 1;
+		transition-duration: .25s;
+	}
+
+	&__fake-toggle::after {
+    content: "";
+    position: absolute;
+    height: 2px;
+    width: 100%;
+		background: #616161;
+		border-radius: 10px;
+    top: 8px;
+		z-index: 1;
+		transition-duration: .25s;
+	}
+
+	&__menu-toggle:checked ~ &__nav {
+		display: flex;
+	}
+
+	&__menu-toggle:checked ~ &__fake-toggle::after {
+		top: 1px;
+		transform: rotate(90deg);
+	}
+
+	&__menu-toggle:checked ~ &__fake-toggle::before {
+    top: 0px;
+	}
+
+	&__menu-toggle:checked ~ &__fake-toggle {
+    right: 0;
+		top: 9px;
+		transform: rotate(45deg);
+	}
 }
