--- a/src/style.scss
+++ b/src/style.scss
@@ -22,7 +22,7 @@
 @import '/UI_kit/cards/components/login/login';
 @import '/UI_kit/cards/components/room/room';
 @import '/UI_kit/cards/cards';
-@import '/UI_kit/headers-footers/components/header/header';
+// @import '/UI_kit/headers-footers/components/header/header';
 @import '/UI_kit/headers-footers/components/footer/footer';
 :root {
     font: normal normal .875em/1.2 Arial, Helvetica, sans-serif;
