--- a/src/UI_kit/headers-footers/components/header/header.scss
+++ b/src/UI_kit/headers-footers/components/header/header.scss
@@ -11,7 +11,8 @@
 	&__container {
     max-width: 1159px;
     margin: 0 auto;
-    display: flex;
+		display: flex;
+		align-items: center;
 	}
 
 	&__nav {
