--- a/src/UI_kit/cards/components/calendar/calendar.scss
+++ b/src/UI_kit/cards/components/calendar/calendar.scss
@@ -13,12 +13,12 @@
     box-sizing: border-box
 }
 .datepicker-inline {
-    position: relative;
-    min-width: 320px;
-    max-width: 320px;
+    // position: relative;
+    // min-width: 320px;
+    // max-width: 320px;
     .datepicker {
         position: absolute;
-        top: 5px;
+        top: 75px;
         left: 0px;
         background: #FFFFFF;
         border: 1px solid rgba(31, 32, 65, 0.25);
