--- a/src/UI_kit/form-elements/components/dropdown/dropdown.scss
+++ b/src/UI_kit/form-elements/components/dropdown/dropdown.scss
@@ -2,6 +2,7 @@
 @import "/UI_kit/cards/components/calendar/calendar";
 
 .dropdown-wrapper {
+	position: relative;
 	display: inline-flex;
 	align-items: center;
 	justify-content: space-between;
@@ -216,5 +217,4 @@
 	&__button-clear_display-true {
 		display: inline-block;
 	}
-
 }
