--- a/src/index.pug
+++ b/src/index.pug
@@ -26,4 +26,4 @@ html(lang="en")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		title Document
 	body
-		
+		include /website_pages/landing-page/landing-page
