--- a/src/style.scss
+++ b/src/style.scss
@@ -15,15 +15,15 @@
 @import 'FEcomponents/review/review';
 @import 'FEcomponents/room-details/room-details';
 @import 'FEcomponents/toggle/toggle';
-// @import "root/UI_kit/cards/components/calendar/calendar";
+
 @import '/UI_kit/cards/components/find-room/find-room';
 @import '/UI_kit/cards/components/booking/booking';
 @import '/UI_kit/cards/components/registration/registration';
 @import '/UI_kit/cards/components/login/login';
 @import '/UI_kit/cards/components/room/room';
-@import '/UI_kit/cards/cards';
 @import '/UI_kit/headers-footers/components/header/header';
 @import '/UI_kit/headers-footers/components/footer/footer';
+@import '/website_pages/landing-page/landing-page';
 :root {
     font: normal normal .875em/1.2 Arial, Helvetica, sans-serif;
     box-sizing: border-box;
@@ -34,30 +34,4 @@
 *::before,
 *::after {
     box-sizing: inherit;
-}
-
-.headers-footers {
-
-    &__logo {
-        margin-top: 31px;
-        margin-bottom: 20px;
-        display: block;
-    }
-
-    &__header-logout {
-        margin-bottom: 45px;
-    }
-
-    &__header-login {
-        margin-bottom: 45px;
-    }
-
-    &__footer-desktop {
-        margin-bottom: 39px;
-    }
-
-    &__footer-mobile {
-        max-width: 1000px;
-        margin: 0 auto;
-    }
 }
