--- a/src/UI_kit/cards/components/room/room.pug
+++ b/src/UI_kit/cards/components/room/room.pug
@@ -4,7 +4,7 @@ mixin room(options = {img: "room_1", price: "9 990₽", comments: 145, number: 8
 	.room
 		.room__preview
 			a.room__preview-link(href="#")
-				img.room__preview-img(src=require(`root/images/${options.img}.jpg`).default, alt="room")
+				img.room__preview-img(src=require(`root/images/rooms/${options.img}.jpg`).default, alt="room")
 			a.room__prev(href="")
 				svg.room__prev-img(width="13" height="8" viewBox="0 0 13 8" fill="none" xmlns="http://www.w3.org/2000/svg")
 					path(d="M11.3301 0.578125L12.7363 1.98438L6.73633 7.98438L0.736328 1.98438L2.14258 0.578125L6.73633 5.17188L11.3301 0.578125Z" fill="#fff" fill-opacity="1")
