--- a/src/style.scss
+++ b/src/style.scss
@@ -23,11 +23,12 @@
 @import '/UI_kit/cards/components/room/room';
 @import '/UI_kit/headers-footers/components/header/header';
 @import '/UI_kit/headers-footers/components/footer/footer';
-@import '/website_pages/landing-page/landing-page';
+
+@import '/website_pages/search-room/search-room';
 :root {
     font: normal normal .875em/1.2 Arial, Helvetica, sans-serif;
     box-sizing: border-box;
-    background: #E5E5E5;
+    // background: #E5E5E5;
 }
 
 *,
