--- a/src/UI_kit/cards/components/signin/signin.scss
+++ b/src/UI_kit/cards/components/signin/signin.scss
@@ -1,6 +1,6 @@
 @import 'FEcomponents/field/field';
 @import 'FEcomponents/button/button';
-.login {
+.signin {
 	background: #FFFFFF;
 	border: 1px solid rgba(0, 0, 0, 0.12);
 	box-sizing: border-box;
